Fix Presentr layout issue

--- a/src/app/projects/presentr/page.module.css
+++ b/src/app/projects/presentr/page.module.css
@@ -1,7 +1,9 @@
 .presentingContainer {
   position: relative;
+  width: 100%;
   max-width: 1200px;
   margin: 0 auto;
+  overflow-x: hidden;
 
   & img {
     width: 100%;
